# fasttrack

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  soak.yml
src/: main.rs
src/app/: db.rs  drive_monitor.rs  errors.rs  ingest.rs  lock.rs  manifest.rs  metadata.rs  mod.rs  scanner.rs  settings.rs  types.rs
ui/: app.slint
